--- a/index.html
+++ b/index.html
@@ -34,10 +34,27 @@
 </head>
 
 <body>
+    <header>
+        <div class="row">
+            <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            <div class="controlsMenu">
+                <div id="menuToggle" class="showMenu">
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="closeMenu">
+                    <p>X</p>
+                </div>
+            </div>
+        </div>
+    </header>
     <nav id="menuBox">
         <ul>
             <li>
-                <a href="./dialogo.html" class="menu-transition" aria-label="Ir al camino disposición al diálogo">
+                <a id="dialogo" href="./dialogo.html" class="menu-transition"
+                    aria-label="Ir al camino disposición al diálogo">
                     <div class="name">
                         <div class="title">Disposición<br />al diálogo</div>
                         <div class="lead">
@@ -50,7 +67,8 @@
             </li>
 
             <li>
-                <a href="./territorios.html" class="menu-transition" aria-label="Ir al camino territorios">
+                <a id="territorios" href="./territorios.html" class="menu-transition"
+                    aria-label="Ir al camino territorios">
                     <div class="name">
                         <div class="title">Territorios</div>
                         <div class="lead">
@@ -63,7 +81,7 @@
             </li>
 
             <li>
-                <a href="./resistencias.html" class="menu-transition"
+                <a id="resistencias" href="./resistencias.html" class="menu-transition"
                     aria-label="Ir al camino resistencias históricas de los pueblos indígenas">
                     <div class="name">
                         <div class="title">Resistencias<br />históricas</div>
@@ -76,7 +94,8 @@
             </li>
 
             <li>
-                <a href="./fuerza.html" class="menu-transition" aria-label="Ir al camino la fuerza de lo colectivo">
+                <a id="fuerza" href="./fuerza_colectivo.html" class="menu-transition"
+                    aria-label="Ir al camino la fuerza de lo colectivo">
                     <div class="name">
                         <div class="title">La fuerza de<br />lo colectivo</div>
                         <div class="lead">
@@ -89,7 +108,7 @@
             </li>
 
             <li>
-                <a class="menu-transition" href="./naciones.html" aria-label="Ir al camino Naciones">
+                <a id="naciones" class="menu-transition" href="./naciones.html" aria-label="Ir al camino Naciones">
                     <div class="name">
                         <div class="title">Naciones</div>
                         <div class="lead">
@@ -100,29 +119,12 @@
                 </a>
             </li>
         </ul>
-
-        <div aria-hidden="true" id="descripciones"></div>
-        <div aria-hidden="true" id="backImg"></div>
     </nav>
     <div class="background-terrain">
         <img class="mask" src="images/terrain-home.svg">
         <img class="back" src="images/terrain-home.svg">
     </div>
     <div class="wrapper">
-        <header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 align-self-center">
-                        <img class="logo-inside" src="./multimedia/logo-sanaciones-01.svg" />
-                    </div>
-                    <div class="col-sm-8 text-right align-self-center">
-                        <a href="#modal">
-                            <img class="menu" src="./multimedia/menu-bar-02.svg" />
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </header>
         <section>
             <div class="container sanaciones-content">
                 <div class="parallax right-top" style="top: -300px; right: -100px;">
@@ -478,116 +480,6 @@
             </div>
         </footer>
     </div>
-    <!---MENU-->
-    <div class="remodal menu" data-remodal-id="modal" role="dialog" aria-labelledby="modal1Title"
-        aria-describedby="modal1Desc">
-        <button data-remodal-action="close" class="remodal-close" aria-label="Close"></button>
-        <div>
-            <img class="logo-footer" src="./multimedia/logo-sanaciones-footer-01.svg">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <ul class="menu-nav">
-                        <li>
-                            <a href="index.html">
-                                Inicio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="dialogo.html">
-                                Disposición al Diálogo
-                            </a>
-                        </li>
-                        <li>
-                            <a href="territorios.html">
-                                Territorios
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="territorios_ruama.html">
-                                        Ruama Ithuhkʉna
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="territorios_Jenojuaboyam.html">
-                                        Jenojuaboyam Jenoshnan
-                                    </a>
-                                </li>
-                            </ul>
-
-                        </li>
-                        <li>
-                            <a href="resistencias.html">
-                                Resistencias Históricas de los Pueblos Indígenas
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="resistencias_endulzar.html">
-                                        Endulzar la palabra
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="resistencias_ishtana.html">
-                                        Ishtana. Recuperar y proteger para sanar
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="resistencias_recuperar.html">
-                                        Recuperar para sanar
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <ul class="menu-nav">
-                        <li>
-                            <a href="fuerza_colectivo.html">
-                                La Fuerza de lo Colectivo
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="fuerza_armonia_equilibrio.html">
-                                        Armonía y equilibrio
-                                    </a>
-                                </li>
-
-
-                                <li>
-                                    <a href="fuerza_sanacion_armonizacion.html">
-                                        Sanación y Armonización
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="naciones.html">
-                                Naciones
-                            </a>
-                        </li>
-                        <li>
-                            <a href="creditos.html">
-                                Créditos
-                            </a>
-                        </li>
-                        <li>
-                            <br>
-                            <a class="button-sanaciones menu text-center" href="mapa.html">
-                                <h3 class="white">Mapa Sanaciones</h3>
-                                <img src="multimedia/0_Index/icono-mapa-03.svg">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!---FIN MENU-->
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
