--- a/naciones.html
+++ b/naciones.html
@@ -45,25 +45,95 @@
 </head>
 
 <body class="blue-background">
+    <header>
+        <div class="row">
+            <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            <div class="controlsMenu">
+                <div id="menuToggle" class="showMenu">
+                    <input type="checkbox" />
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+
+            </div>
+        </div>
+    </header>
+    <nav id="menuBox">
+        <ul>
+            <li>
+                <a id="dialogo" href="./dialogo.html" class="menu-transition"
+                    aria-label="Ir al camino disposición al diálogo">
+                    <div class="name">
+                        <div class="title">Disposición<br />al diálogo</div>
+                        <div class="lead">
+                            En todos los ámbitos de la vida y esencial en sus procesos de
+                            sanación
+                        </div>
+                    </div>
+                    <div class="trama"></div>
+                </a>
+            </li>
+
+            <li>
+                <a id="territorios" href="./territorios.html" class="menu-transition"
+                    aria-label="Ir al camino territorios">
+                    <div class="name">
+                        <div class="title">Territorios</div>
+                        <div class="lead">
+                            Conectan con lo sagrado y permiten ver las huellas que ha dejado el
+                            conflicto armado
+                        </div>
+                    </div>
+                    <div class="trama"></div>
+                </a>
+            </li>
+
+            <li>
+                <a id="resistencias" href="./resistencias.html" class="menu-transition"
+                    aria-label="Ir al camino resistencias históricas de los pueblos indígenas">
+                    <div class="name">
+                        <div class="title">Resistencias<br />históricas</div>
+                        <div class="lead">
+                            Reinterpretan su memoria desde la palabra de vida y conocimiento
+                        </div>
+                    </div>
+                    <div class="trama"></div>
+                </a>
+            </li>
+
+            <li>
+                <a id="fuerza" href="./fuerza_colectivo.html" class="menu-transition"
+                    aria-label="Ir al camino la fuerza de lo colectivo">
+                    <div class="name">
+                        <div class="title">La fuerza de<br />lo colectivo</div>
+                        <div class="lead">
+                            Unidos son más fuertes para enfrentar la violencia de actores
+                            armados
+                        </div>
+                    </div>
+                    <div class="trama"></div>
+                </a>
+            </li>
+
+            <li>
+                <a id="naciones" class="menu-transition" href="./naciones.html" aria-label="Ir al camino Naciones">
+                    <div class="name">
+                        <div class="title">Naciones</div>
+                        <div class="lead">
+                            Involucra la cosmovisión, la autonomía y la autodeterminación
+                        </div>
+                    </div>
+                    <div class="trama"></div>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <div class="background-terrain">
         <img class="mask" src="images/terrain-naciones.svg">
         <img class="back" src="images/terrain-naciones.svg">
     </div>
     <div class="wrapper">
-        <header>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4 align-self-center">
-                        <img class="logo-inside" src="./multimedia/logo-sanaciones-01.svg" />
-                    </div>
-                    <div class="col-sm-8 text-right align-self-center">
-                        <a href="#modal">
-                            <img class="menu" src="./multimedia/menu-bar-02.svg" />
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </header>
         <section class="main-axis">
             <div class="container-fluid back-img naciones">
                 <div class="container">
@@ -195,7 +265,7 @@
                                 <br>
                             </div>
                             <div class="col-md-12 align-self-end">
-                                <img class="img-fluid no-margin" src="multimedia/7Naciones/Nacion_Bari.jpg">
+                                <img class="img-fluid no-margin mask-image" src="multimedia/7Naciones/Nacion_Bari.jpg">
                             </div>
                             <div class="col-md-12 align-self-end">
                                 <p class="footer-img white">
@@ -258,7 +328,7 @@
                                 <br>
                             </div>
                             <div class="col-md-12 align-self-end">
-                                <img class="img-fluid no-margin" src="multimedia/7Naciones/Nacion_Nasa.jpg">
+                                <img class="img-fluid no-margin mask-image" src="multimedia/7Naciones/Nacion_Nasa.jpg">
                             </div>
                             <div class="col-md-12 align-self-end">
                                 <p class="footer-img white">
@@ -797,116 +867,6 @@
         </footer>
     </div>
 
-    <!---MENU-->
-    <div class="remodal menu" data-remodal-id="modal" role="dialog" aria-labelledby="modal1Title"
-        aria-describedby="modal1Desc">
-        <button data-remodal-action="close" class="remodal-close" aria-label="Close"></button>
-        <div>
-            <img class="logo-footer" src="./multimedia/logo-sanaciones-footer-01.svg">
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <ul class="menu-nav">
-                        <li>
-                            <a href="index.html">
-                                Inicio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="dialogo.html">
-                                Disposición al Diálogo
-                            </a>
-                        </li>
-                        <li>
-                            <a href="territorios.html">
-                                Territorios
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="territorios_ruama.html">
-                                        Ruama Ithuhkʉna
-                                    </a>
-                                </li>
-                            </ul>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="territorios_Jenojuaboyam.html">
-                                        Jenojuaboyam Jenoshnan
-                                    </a>
-                                </li>
-                            </ul>
-
-                        </li>
-                        <li>
-                            <a href="resistencias.html">
-                                Resistencias Históricas de los Pueblos Indígenas
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="resistencias_endulzar.html">
-                                        Endulzar la palabra
-                                    </a>
-                                </li>
-
-                                <li>
-                                    <a href="resistencias_ishtana.html">
-                                        Ishtana. Recuperar y proteger para sanar
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="resistencias_recuperar.html">
-                                        Recuperar para sanar
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <ul class="menu-nav">
-                        <li>
-                            <a href="fuerza_colectivo.html">
-                                La Fuerza de lo Colectivo
-                            </a>
-                            <ul class="submenu">
-                                <li>
-                                    <a href="fuerza_armonia_equilibrio.html">
-                                        Armonía y equilibrio
-                                    </a>
-                                </li>
-
-
-                                <li>
-                                    <a href="fuerza_sanacion_armonizacion.html">
-                                        Sanación y Armonización
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="naciones.html">
-                                Naciones
-                            </a>
-                        </li>
-                        <li>
-                            <a href="creditos.html">
-                                Créditos
-                            </a>
-                        </li>
-                        <li>
-                            <br>
-                            <a class="button-sanaciones menu text-center" href="mapa.html">
-                                <h3 class="white">Mapa Sanaciones</h3>
-                                <img src="multimedia/0_Index/icono-mapa-03.svg">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!---FIN MENU-->
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
