--- a/mapaejemplo.html
+++ b/mapaejemplo.html
@@ -48,7 +48,9 @@
 <body style="margin: 0; padding: 0;">
     <header>
         <div class="row">
-            <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            <a href="index.html">
+                <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            </a>
             <div class="controlsMenu">
                 <div id="menuToggle" class="showMenu">
                     <input type="checkbox" />
