--- a/naciones.html
+++ b/naciones.html
@@ -47,7 +47,9 @@
 <body class="blue-background">
     <header>
         <div class="row">
-            <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            <a href="index.html">
+                <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            </a>
             <div class="controlsMenu">
                 <div id="menuToggle" class="showMenu">
                     <input type="checkbox" />
