--- a/territorios_Jenojuaboyam.html
+++ b/territorios_Jenojuaboyam.html
@@ -36,7 +36,9 @@
 <body class="teal-background">
     <header>
         <div class="row">
-            <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            <a href="index.html">
+                <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+            </a>
             <div class="controlsMenu">
                 <div id="menuToggle" class="showMenu">
                     <input type="checkbox" />
