Ajuste menu artistas

--- a/artistas/Janneth.html
+++ b/artistas/Janneth.html
@@ -34,7 +34,9 @@
     <body>
         <header>
             <div class="row">            
-                <img class="logo-inside" src="../multimedia/logo-sanaciones-footer-01.svg" />
+                <a href="index.html">
+                    <img class="logo-inside" src="./multimedia/logo-sanaciones-footer-01.svg" />
+                </a>
                 <div class="controlsMenu">
                     <div id="menuToggle" class="showMenu">
                         <input type="checkbox" />
